# Squaredle_helper

./: .gitignore  README.md  app.py  pyproject.toml
src/: routes.py
src/list_handling/: list_fetcher.py
src/services/: create_grid.py  gridservice.py  wordservice.py
templates/: index.html  submit_grid.html
