[tool.poetry]
name = "squaredle-helper"
version = "0.1.0"
description = ""
authors = ["Eero Antikainen <eero.antikainen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
getenv = "^0.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
